# system-inspection-report

./: .gitignore  README.md  pyproject.toml
examples/: config.example.json  env.example  system-inspection-report.service  system-inspection-report.timer
scripts/: system_inspection_report.sh
src/system_inspection_report/: assess.py  collectors.py  config.py  delivery.py  main.py  renderer.py
src/system_inspection_report/templates/: report.html
tests/: test_basics.py
